# agent-ESF

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  _AGENTS.md  ___AGENTS.md  docker-compose.yml  pyproject.toml  skills-lock.json
.agents/skills/asset-events-json-extractor/: SKILL.md
.agents/skills/asset-events-json-extractor/assets/: taxonomy.json
.agents/skills/asset-events-json-extractor/references/: examples.md  schema.md  taxonomy.md
.agents/skills/credit-card-purchase-json-extractor/: SKILL.md
.agents/skills/crypto-investment-json-extractor/: SKILL.md
.agents/skills/esf-ods-ledger-writer/: SKILL.md
.agents/skills/investment-json-extractor/: SKILL.md
.agents/skills/multimodal-json-extractor/: SKILL.md
.codex/: config.toml
docker/: entrypoint.sh
docs/: architecture.md
src/esf_agent_service/: main.py
src/esf_agent_service/api/: __init__.py  dependencies.py  router.py
src/esf_agent_service/application/: __init__.py  agent_runtime.py  container.py  processors.py
src/esf_agent_service/cli/: __init__.py  agent_runner.py  telegram_webhook.py
src/esf_agent_service/core/: __init__.py  config.py  logging.py
src/esf_agent_service/domain/: models.py
src/esf_agent_service/integrations/: __init__.py
src/esf_agent_service/repositories/: __init__.py  filesystem_agent_results.py  filesystem_inbox.py
src/esf_agent_service/workers/: __init__.py  telegram_poller.py
tests/: test_agent_processing.py  test_agent_runner.py  test_config.py  test_filesystem_inbox.py  test_parser.py
(+29 files in other folders)
