[tool.poetry]
name = "esf-agent-service"
version = "0.1.0"
description = "FastAPI ingress service for Telegram updates in the ESF agent project."
authors = ["ESF Agent <noreply@example.com>"]
readme = "README.md"
packages = [{ include = "esf_agent_service", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.111,<1.0"
uvicorn = { version = ">=0.30,<1.0", extras = ["standard"] }
httpx = ">=0.27,<1.0"
pydantic = ">=2.7,<3.0"
pydantic-settings = ">=2.3,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9.0"

[tool.poetry.scripts]
esf-agent-poller = "esf_agent_service.workers.telegram_poller:main"
esf-agent-webhook = "esf_agent_service.cli.telegram_webhook:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
